<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/title_text_view"
                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/layout_pin"
                layout="@layout/layout_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <ImageView
                android:id="@+id/potential_earnings_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/potential_earning_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_pin"
                app:srcCompat="@drawable/ic_potential_earnings" />

            <TextView
                android:id="@+id/potential_earnings_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/potential_earnings"
                app:layout_constraintBottom_toBottomOf="@id/potential_earnings_image_view"
                app:layout_constraintStart_toEndOf="@id/potential_earnings_image_view"
                app:layout_constraintTop_toTopOf="@id/potential_earnings_image_view" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="@id/potential_earnings_image_view"
                app:layout_constraintStart_toEndOf="@id/potential_earnings_text_view"
                app:layout_constraintTop_toTopOf="@id/potential_earnings_image_view"
                tools:text="250 denars" />

            <ImageView
                android:id="@+id/package_size_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/package_size_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/potential_earnings_image_view"
                app:srcCompat="@drawable/ic_package_size" />

            <TextView
                android:id="@+id/package_size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/package_size"
                app:layout_constraintBottom_toBottomOf="@id/package_size_image_view"
                app:layout_constraintStart_toEndOf="@id/package_size_image_view"
                app:layout_constraintTop_toTopOf="@id/package_size_image_view" />

            <TextView
                android:id="@+id/package_size_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/small"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@id/package_size_image_view"
                app:layout_constraintStart_toEndOf="@id/package_size_text_view"
                app:layout_constraintTop_toTopOf="@id/package_size_image_view" />

            <ImageView
                android:id="@+id/cash_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/cash_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/package_size_image_view"
                app:srcCompat="@drawable/ic_cash" />

            <TextView
                android:id="@+id/cash_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/payment_method"
                app:layout_constraintBottom_toBottomOf="@id/cash_image_view"
                app:layout_constraintStart_toEndOf="@id/cash_image_view"
                app:layout_constraintTop_toTopOf="@id/cash_image_view" />

            <TextView
                android:id="@+id/deliveryPaymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/cash"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@id/cash_image_view"
                app:layout_constraintStart_toEndOf="@id/cash_text_view"
                app:layout_constraintTop_toTopOf="@id/cash_image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>