<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterValidationCodeActivity">

    <ImageView
        android:id="@+id/activityRegisterSendImage"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginTop="36dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_code_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/activityRegisterSendTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/activitty_verifaction_code_title"
        android:textSize="@dimen/largeFontSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityRegisterSendImage" />

    <EditText
        android:id="@+id/activityVerificationCodeEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/edit_text_cornered_background_gray"
        android:hint="@string/register_enter_code_hint"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityRegisterSendTitle"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/activityRegisterEnterYourPhoneDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin_medium"
        android:gravity="center"
        android:lineSpacingMultiplier="1.6"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"
        android:text="@string/enter_the_code_we_send_you"
        android:textSize="@dimen/headerFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityVerificationCodeEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>