<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_medium">

            <ImageView
                    android:id="@+id/delivery_image_view"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="1"
                    android:layout_height="230dp"
                    android:src="@drawable/no_image_placeholder"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/delivery_image_content_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                    android:id="@+id/package_size_image_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:contentDescription="@string/package_size_content_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/delivery_image_view"
                    app:srcCompat="@drawable/ic_package_size" />

            <TextView
                    android:id="@+id/package_size_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="13sp"
                    android:text="@string/package_size"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintBottom_toBottomOf="@id/package_size_image_view"
                    app:layout_constraintStart_toEndOf="@id/package_size_image_view"
                    app:layout_constraintTop_toTopOf="@id/package_size_image_view" />

            <TextView
                    android:id="@+id/package_size_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="@id/package_size_image_view"
                    app:layout_constraintStart_toEndOf="@id/package_size_text_view"
                    app:layout_constraintTop_toTopOf="@id/package_size_image_view" />

            <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="13sp"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/package_size_image_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>