<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
                name="travelModeActiveId"
                type="Integer" />

        <variable
                name="isOnline"
                type="boolean" />

        <variable
                name="isShowMapRoute"
                type="boolean" />

        <variable
                name="isConfirmDropOff"
                type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewProfileDrawer"
                android:layout_width="@dimen/sizeImageDrawer"
                android:layout_height="@dimen/sizeImageDrawer"
                android:layout_marginStart="@dimen/margin_medium_large"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:elevation="10dp"
                android:src="@drawable/ic_user_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/pin_layout_constraint_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".map.fragments.MapFragment" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pin_layout_constraint_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:visibility="@{isShowMapRoute ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <include
                    android:id="@+id/layout_pin"
                    layout="@layout/layout_pin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Button
                    android:id="@+id/navigate_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@drawable/corner_white_background_black_border"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="@dimen/margin_medium"
                    android:text="Navigate"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_pin" />

            <Button
                    android:id="@+id/navigate_package_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:visibility="@{isConfirmDropOff ? View.GONE : View.VISIBLE}"
                    android:background="@drawable/corner_white_background_black_border"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="@dimen/margin_medium"
                    android:text="Package Image"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/navigate_button" />

            <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@drawable/button_cornered_background_orange"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="@dimen/margin_medium"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:confirmText="@{isConfirmDropOff}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/navigate_package_image"
                    tools:text="Confirm pick-up" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/pin_layout_constraint_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/foot_image_view"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/foot_content_description"
                    app:imageFromBoolean="@{travelModeActiveId==0}"
                    app:srcCompat="@drawable/ic_foot" />

            <ImageView
                    android:id="@+id/bicycle_image_view"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/bicycle_content_description"
                    app:imageFromBoolean="@{travelModeActiveId==1}"
                    app:srcCompat="@drawable/ic_bicycle" />

            <ImageView
                    android:id="@+id/scooter_image_view"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/scooter_content_description"
                    app:imageFromBoolean="@{travelModeActiveId==2}"
                    app:srcCompat="@drawable/ic_scooter" />

            <ImageView
                    android:id="@+id/car_image_view"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/car_content_description"
                    app:imageFromBoolean="@{travelModeActiveId==3}"
                    app:srcCompat="@drawable/ic_car" />
        </LinearLayout>

        <ImageView
                android:id="@+id/go_online_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_large"
                android:contentDescription="@string/online_content_description"
                android:visibility="@{isOnline ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_go_online" />

        <ImageView
                android:id="@+id/isOnlineStatusImageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_small"
                android:contentDescription="@string/online_content_description"
                android:visibility="@{isOnline ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_online" />

        <ImageView
                android:id="@+id/my_location_image_view"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_large"
                android:contentDescription="@string/my_location_content_description"
                app:layout_constraintBottom_toTopOf="@id/pin_layout_constraint_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_address" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>